[tool.poetry]
name = "mercury"
version = "0"
description = "Emacs interface to Facebook Messenger"
authors = ["Radon Rosborough <radon.neon@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.5, <4.0"
fbchat = "^1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
