[tool.poetry]
name = "mercury"
version = "0"
description = "Emacs interface to Facebook Messenger"
authors = ["Radian LLC <contact+mercury@radian.codes>"]

[tool.poetry.dependencies]
python = ">=3.6, <4.0"
fbchat = "^1.6"
atomicwrites = "^1.3"
xdg = "^4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
